[package]
name = "postgrest"
version = "1.7.0"
authors = ["Bobbie Soedirgo <bobbie@soedirgo.dev>"]
description = "PostgREST client-side library"
homepage = "https://github.com/supabase/postgrest-rs"
repository = "https://github.com/supabase/postgrest-rs"
readme = "README.md"
license = "Apache-2.0 OR MIT"
keywords = ["postgres", "postgrest", "rest", "api"]
categories = ["development-tools"]
edition = "2021"

[dependencies]
# reqwest 0.13 renamed rustls-tls to rustls, and made query/form features optional
reqwest = { version = "0.13", default-features = false, features = ["rustls", "query"] }

[dev-dependencies]
json = "0.12"
tokio = { version = "1", features = ["full"] }
